crates/vesc-ffi/tests/ui/call_lbm_enc_i_without_unsafe.stderr
error[E0133]: call to unsafe function `lbm_enc_i` is unsafe and requires unsafe block
 --> tests/ui/call_lbm_enc_i_without_unsafe.rs:2:13
  |
2 |     let _ = vesc_ffi::raw::lbm_enc_i(0);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior
