crates/vesc-ffi/tests/ui/call_lbm_enc_i_without_unsafe.rs
fn main() {
    let _ = vesc_ffi::raw::lbm_enc_i(0);
}
